Update Blog “example-of-mapreduce-with-ezmeral-data-fabric-mapr-database-binary-table”